# bm25x

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  publish.yml
benchmarks/: beir_improvements.py  beir_msmarco.py  beir_scifact.py  bench_all_bm25s.py  bench_all_datasets.py  bench_bm25rs.py  bench_bm25s.py  bench_bm25x.py  bench_rayon.py  generate_charts.py  generate_corpus.py  mteb_tokenizers.py  run_all.py
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
python/tests/: test_subset.py
src/: cuda.rs  index.rs  lib.rs  multi_gpu.rs  scoring.rs  storage.rs  tokenizer.rs
