[package]
name = "bm25x"
version = "0.1.0"
edition = "2021"
description = "A fast, streaming-friendly BM25 search engine with mmap support"
license = "MIT"

[dependencies]
memmap2 = "0.9"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
rust-stemmers = "1.2"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
