[workspace]

[package]
name = "bm25x-python"
version = "0.3.1"
edition = "2021"

[lib]
name = "bm25x"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
bm25x-core = { path = "..", package = "bm25x" }

[features]
default = ["cuda"]
cuda = ["bm25x-core/cuda"]
